--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self' file: data: blob:; script-src 'self' 'unsafe-inline' 'unsafe-eval' file: data: blob:; style-src 'self' 'unsafe-inline' file: data: blob: https://fonts.googleapis.com; img-src 'self' file: data: blob: https:; font-src 'self' file: data: blob: https://fonts.gstatic.com; connect-src 'self' file: data: blob: https: wss:; frame-src 'self' file: data: blob: https:; worker-src 'self' file: data: blob:; child-src 'self' file: data: blob:; object-src 'none'; base-uri 'self';"
+            content="default-src 'self' file: data: blob: http://localhost:5273 ws://localhost:5273; script-src 'self' 'unsafe-inline' 'unsafe-eval' file: data: blob: http://localhost:5273; style-src 'self' 'unsafe-inline' file: data: blob: https://fonts.googleapis.com http://localhost:5273; img-src 'self' file: data: blob: https:; font-src 'self' file: data: blob: https://fonts.gstatic.com; connect-src 'self' file: data: blob: https: wss: ws://localhost:5273 http://localhost:5273; frame-src 'self' file: data: blob: https:; worker-src 'self' file: data: blob:; child-src 'self' file: data: blob:; object-src 'none'; base-uri 'self';"
         />
         <meta
             name="description"
