--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -239,7 +239,7 @@
                     title="Alternative FIT Data View"
                     allowfullscreen
                     allow
-                    sandbox="allow-same-origin allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox"
+                    sandbox="allow-same-origin allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox allow-downloads allow-downloads-without-user-activation"
                     referrerpolicy="no-referrer"
                     loading="eager"
                     name="altfit-iframe"
