✨ [feat] Add experimental folder-based FIT browser
✨ [feat] Introduce an experimental "Browser" tab for direct folder navigation and activity selection
 - 📂 Implementation of a dedicated file list UI with directory traversal and `.fit` file filtering
 - ⚙️ Registration of new IPC handlers for persistent root folder management and secure path validation
 - 🕹️ Addition of a feature toggle in the application menu to enable/disable the experimental browser tab
🛡️ [security] Implement network request interception to block unwanted telemetry and reduce console errors
 - 🛑 Integration of a main-process protocol blocker for known analytics hostnames
 - 🧩 Addition of a renderer-side fetch/XHR patch to prevent noisy network failures in "Alternative View"
🗺️ [map] Enhance map session persistence and improve layer control interactions
 - 💾 Persistence of the selected Leaflet base layer across application restarts
 - 🔼 Reorganization of layer picker priority and correction of OpenTopoMap attribution
 - 🏗️ Optimization of z-index layering to prevent overlapping between minimaps and expanded controls
📂 [file] Add utility for programmatic file loading from absolute paths to support browser-based opening
🛠️ [fix] Improve context menu positioning by implementing viewport clamping and focus management
🧪 [test] Update unit tests across tab state management to account for new UI regions

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -179,6 +179,12 @@
                 </svg>
                 Map
             </button>
+            <button class="tab-button" id="tab-browser" role="tab" aria-selected="false" tabindex="0">
+                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M3 6a2 2 0 0 1 2-2h5l2 2h7a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V6z" />
+                </svg>
+                Browser
+            </button>
             <button class="tab-button" id="tab-altfit" role="tab" aria-selected="false" tabindex="0">
                 <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <ellipse cx="12" cy="5" rx="9" ry="3" />
@@ -226,6 +232,7 @@
         <!-- Card-like Container for Tab Content -->
         <div class="tab-card">
             <div id="content-map" class="tab-content"></div>
+            <div id="content-browser" class="tab-content"></div>
             <div id="content-data" class="tab-content"></div>
             <div id="content-chartjs" class="tab-content">
                 <div id="chartjs-chart-container"></div>
